--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Bautizo de Matias - Safari</title>
+  <title>Bautizo de Matías - Safari</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -597,7 +597,7 @@
         </div>
         <div class="col-md-6">
           <h4 class="mb-3"><i class="fas fa-male me-2"></i>De Papá</h4>
-          <p>"Con orgullo y alegría, invitamos a nuestros seres queridos a compartir el bautizo de nuestro hijo Matias, un día lleno de bendiciones y amor."</p>
+          <p>"Con orgullo y alegría, invitamos a nuestros seres queridos a compartir el bautizo de nuestro hijo Matías, un día lleno de bendiciones y amor."</p>
           <div class="col-md-6 mb-4">
           <div class="card card-safari h-100">
             <img src="beto.jpeg" class="card-img-top" alt="Roberto">
@@ -647,7 +647,7 @@
 
 <div class="section">
   <h2 class="section-title"><i class="fas fa-gift"></i> Mesa de Regalos</h2>
-  <p class="mb-1 text-center">Su presencia es el mejor regalo, pero si desean obsequiar algo a Matias, estas son algunas opciones:</p>
+  <p class="mb-1 text-center">Su presencia es el mejor regalo, pero si desean obsequiar algo a Matías, estas son algunas opciones:</p>
   <div class="row text-center">
     
     <!-- Mercado Libre -->
@@ -791,3 +791,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
