--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
         </div>
         <div class="col-md-6">
           <h4 class="mb-3"><i class="fas fa-male me-2"></i>De Papá</h4>
-          <p>"Con orgullo y alegría, invitamos a nuestros seres queridos a compartir el bautizo de nuestro hijo Matías, un día lleno de bendiciones y amor."</p>
+          <p>"Con mucha ilusión y agradecimiento a Dios, queremos compartir contigo un momento muy especial en nuestras vidas: el bautizo de nuestro hijo Matías. Será una ocasión llena de fe, alegría y unión familiar, y nos encantaría contar con tu presencia para celebrar juntos este día tan especial"</p>
           <div class="col-md-6 mb-4">
           <div class="card card-safari h-100">
             <img src="beto.jpeg" class="card-img-top" alt="Roberto">
@@ -791,4 +791,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
