--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
   <!-- Hero Section -->
   <div class="hero">
     <img src="matiasprin.jpg" alt="MATI" class="hero-img">
-    <h1>Mi bautizo y cumpleaños No. 2 <br> Matías Zárate</h1>
+    <h1>Mi bautizo y cumpleaños No. 2 <br> Matías Zarate</h1>
     <p class="lead">Una celebración llena de amor y bendiciones en nuestro safari especial</p>
    </div>
 
@@ -602,7 +602,7 @@
           <div class="card card-safari h-100">
             <img src="beto.jpeg" class="card-img-top" alt="Roberto">
             <div class="card-body text-center">
-              <h5 class="card-title">Roberto Zárate Garnica</h5>
+              <h5 class="card-title">Roberto Zarate Garnica</h5>
             </div>
           </div>
         </div>
@@ -791,5 +791,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
