--- a/index.html
+++ b/index.html
@@ -541,31 +541,31 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="matias1.jpg">
+            <img src="matias11.jpg">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nuestro pequeño Mati</h5>
               <p>Tan guapo como siempre</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="matias2.jpg" class="d-block w-100" alt="Safari">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Descansando un momento</h5>
-              <p>Tomando energía para seguir jugando</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="matias3.jpg" class="d-block w-100" alt="Familia">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Booooooo!</h5>
-              <p>Mati con un lindo disfraz</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="matias4.jpg" class="d-block w-100" alt="Bautizo">
+            <img src="matias12.jpg" class="d-block w-100" alt="Safari">
             <div class="carousel-caption d-none d-md-block">
               <h5>Lindo bebé</h5>
               <p>Celebrando al pequeño Mati</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="matias13.jpg" class="d-block w-100" alt="Familia">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Mati modelando</h5>
+              <p>Con todo el estilo</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="matias1.jpg" class="d-block w-100" alt="Bautizo">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Explorador capibara</h5>
+              <p>Un pequeño explorador</p>
             </div>
           </div>
         </div>
@@ -791,6 +791,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
