--- a/index.html
+++ b/index.html
@@ -541,21 +541,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="matias11.jpeg">
+            <img src="mati11.jpeg">
             <div class="carousel-caption d-none d-md-block">
               <h5>Nuestro pequeño Mati</h5>
               <p>Tan guapo como siempre</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="matias12.jpeg" class="d-block w-100" alt="Mati5">
+            <img src="mati12.jpeg" class="d-block w-100" alt="Mati5">
             <div class="carousel-caption d-none d-md-block">
               <h5>Lindo bebé</h5>
               <p>Celebrando al pequeño Mati</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="matias13.jpeg" class="d-block w-100" alt="Mati3">
+            <img src="mati13.jpeg" class="d-block w-100" alt="Mati3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Mati modelando</h5>
               <p>Con todo el estilo</p>
@@ -791,6 +791,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
