--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     :root {
       --safari-green: #4CAF50;
@@ -30,10 +31,14 @@
       background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 120 120"><path fill="%234CAF50" opacity="0.03" d="M20,20 C35,10 85,10 100,20 C115,30 115,85 100,95 C85,105 35,105 20,95 C5,85 5,30 20,20 Z"/><circle fill="%238BC34A" opacity="0.02" cx="30" cy="30" r="8"/><circle fill="%232E7D32" opacity="0.02" cx="90" cy="30" r="10"/><circle fill="%234CAF50" opacity="0.02" cx="60" cy="90" r="12"/></svg>');
     }
 
-    h1, h2, h3 {
-      font-family: 'Playfair Display', serif;
+  h1, h2, h3 {
+      font-family: "Great Vibes", "Adora Queen", "Rosely Script", cursive;
+      font-size: clamp(36px, 7vw, 80px);
+      font-weight: 400;
       color: var(--safari-dark-green);
-      font-weight: 600;
+      letter-spacing: 0.02em;
+      font-feature-settings: "liga" 1, "calt" 1;
+      text-rendering: optimizeLegibility;
     }
 
     .section {
@@ -791,6 +796,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
