--- a/index.html
+++ b/index.html
@@ -661,8 +661,8 @@
     <div class="p-4 rounded" style="background: rgba(200, 230, 201, 0.3);">
       <img src="https://tse3.mm.bing.net/th/id/OIP.mxGA9mvDQrCzlVZafHtIHQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" 
            alt="Mercado Libre" style="width:80px;">
-      <h5 class="mt-3">Mercado Libre</h5>
-      <a href="https://www.mercadolibre.com.mx/mesaderegalos/matias2025" 
+      <h5 class="mt-3">Amazon</h5>
+      <a href="https://www.amazon.com.mx/registries/gl/guest-view/KJGPEGELV4TS?ref_=cm_sw_r_cp_ud_ggr-subnav-share_BHKJ5F6BPETMXHRT8N1G" 
          target="_blank" class="btn btn-safari mt-2">Ver opciones</a>
     </div>
   </div>
@@ -796,6 +796,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
