--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
     <div class="row text-center">
   <div class="col-md-6 mb-6 mx-auto">
     <div class="p-4 rounded" style="background: rgba(200, 230, 201, 0.3);">
-      <img src="https://www.vectorstock.com/royalty-free-vectors/amazon-logo-vectors" 
+      <img src="https://iconos8.es/icons/set/amazon" 
            alt="Mercado Libre" style="width:80px;">
       <h5 class="mt-3">Amazon</h5>
       <a href="https://www.amazon.com.mx/registries/gl/guest-view/KJGPEGELV4TS?ref_=cm_sw_r_cp_ud_ggr-subnav-share_BHKJ5F6BPETMXHRT8N1G" 
@@ -796,6 +796,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
