--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
       <div class="row">
         <div class="col-md-6 mb-4">
           <h4 class="mb-3"><i class="fas fa-female me-2"></i>De Mamá </h4>
-          <p>"Con orgullo y alegría, invitamos a nuestros seres queridos a compartir este día tan importante para nosotros"</p>
+          <p>"Antes era sólo una ilusión; no pensamos que llegaría tan pronto este día, después de tantos mimos y travesuras, recordamos el día de la llegada de Matías y compartimos con ustedes la bendición tan grande de presentarlo ante Dios y verlo cumplir 2 años"</p>
           <div class="col-md-6 mb-4">
           <div class="card card-safari h-100">
             <img src="mei.jpeg" class="card-img-top" alt="Meilyn">
@@ -796,6 +796,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
