--- a/index.html
+++ b/index.html
@@ -508,6 +508,11 @@
     <img src="matiasprin.jpg" alt="MATI" class="hero-img">
     <h1>Mi bautizo y cumpleaños No. 2 <br> Matías Zarate</h1>
     <p class="lead">Una celebración llena de amor y bendiciones en nuestro safari especial</p>
+    <div class="mt-4">
+      <button class="btn btn-modern" onclick="confirmAttendance()">
+        <i class="fas fa-check-circle me-2"></i>Confirmar Asistencia
+      </button>
+    </div>
    </div>
 
   <div class="container py-5" style="position: relative; z-index: 10;">
@@ -796,6 +801,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
