--- a/index.html
+++ b/index.html
@@ -625,6 +625,25 @@
       </ul>
     </div>
 
+ <div class="section">
+  <h2 class="section-title">
+    <i class="fas fa-hands-helping"></i> Código de vestimenta
+  </h2>
+  <p class="mb-6">(                                                )</p>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card card-modern">
+        <img src="ves1.jpeg" class="img-fluid object-fit-contain" alt="ves1">
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card card-modern">
+        <img src="ves2.jpeg" class="img-fluid object-fit-contain" alt="ves2">
+      </div>
+    </div>
+  </div>
+</div>
+      
     <div class="section">
       <h2 class="section-title"><i class="fas fa-bible"></i> Versículo Especial</h2>
       <blockquote class="blockquote">
@@ -796,6 +815,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
