--- a/index.html
+++ b/index.html
@@ -627,9 +627,9 @@
 
  <div class="section">
   <h2 class="section-title">
-    <i class="fas fa-hands-helping"></i> Código de vestimenta
+    <i class="fas fa-tshirt"></i> Código de vestimenta
   </h2>
-  <p class="mb-6">(                                                )</p>
+  <p class="mb-6">Vestimenta sugerida: tonos tierra como verde olivo, salvia, beige y blanco. Estilo elegante, natural y armonioso.</p>
   <div class="row">
     <div class="col-md-6">
       <div class="card card-modern">
@@ -815,6 +815,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
