--- a/index.html
+++ b/index.html
@@ -621,28 +621,9 @@
         <li class="list-group-item"><strong><i class="fas fa-clock me-2"></i>Misa:</strong> 13:00 p.m.</li>
         <li class="list-group-item"><strong><i class="fas fa-church me-2"></i>Lugar:</strong> C. 10 de Mayo 12, 56940, Santiago Cuauhtenco. México. </li>
         <li class="list-group-item"><strong><i class="fas fa-utensils me-2"></i>Recepción:</strong> 14:30, Carretera Amecameca, Camino Real a Sta Isabel Chalma S/N, Amecameca De Juárez, México </li>
-        <li class="list-group-item"><strong><i class="fas fa-users me-2"></i>Padrinos:</strong> Eloy Vázquez Garnica y Alexa Fernanda Vázquez Garnica</li>
+        <li class="list-group-item"><strong><i class="fas fa-users me-2"></i>Padrinos:</strong> Eloy Vázquez Garnica <br> Alexa Fernanda Vázquez Garnica</li>
       </ul>
     </div>
-
- <div class="section">
-  <h2 class="section-title">
-    <i class="fas fa-tshirt"></i> Código de vestimenta
-  </h2>
-  <p class="mb-6">Vestimenta sugerida: tonos tierra como verde olivo, salvia, beige y blanco. Estilo elegante, natural y armonioso.</p>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="card card-modern">
-        <img src="ves1.jpeg" class="img-fluid object-fit-contain" alt="ves1">
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="card card-modern">
-        <img src="ves2.jpeg" class="img-fluid object-fit-contain" alt="ves2">
-      </div>
-    </div>
-  </div>
-</div>
       
     <div class="section">
       <h2 class="section-title"><i class="fas fa-bible"></i> Versículo Especial</h2>
@@ -815,6 +796,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
