--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
         <li class="list-group-item"><strong><i class="fas fa-clock me-2"></i>Misa:</strong> 13:00 p.m.</li>
         <li class="list-group-item"><strong><i class="fas fa-church me-2"></i>Lugar:</strong> C. 10 de Mayo 12, 56940, Santiago Cuauhtenco. México. </li>
         <li class="list-group-item"><strong><i class="fas fa-utensils me-2"></i>Recepción:</strong> 14:30, Carretera Amecameca, Camino Real a Sta Isabel Chalma S/N, Amecameca De Juárez, México </li>
-        <li class="list-group-item"><strong><i class="fas fa-users me-2"></i>Padrinos:</strong> Eloy Vázquez Garnica <br> Alexa Fernanda Vázquez Garnica</li>
+        <li class="list-group-item"><strong><i class="fas fa-users me-2"></i>Padrinos:</strong> Alexa Fernanda Vázquez Garnica <br> Eloy Vázquez Garnica </li>
       </ul>
     </div>
       
@@ -796,6 +796,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
