--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
         <div class="col-md-6 mb-4">
           <h4 class="mb-3"><i class="fas fa-female me-2"></i>De Mamá </h4>
           <p>"Antes era sólo una ilusión; no pensamos que llegaría tan pronto este día, después de tantos mimos y travesuras, recordamos el día de la llegada de Matías y compartimos con ustedes la bendición tan grande de presentarlo ante Dios y verlo cumplir 2 años"</p>
-          <div class="col-md-6 mb-4 d-inline-block">
+          <div class="col-md-6 mb-4">
           <div class="card card-safari h-100">
             <img src="mei.jpeg" class="card-img-top" alt="Meilyn">
             <div class="card-body text-center">
@@ -603,7 +603,7 @@
         <div class="col-md-6">
           <h4 class="mb-3"><i class="fas fa-male me-2"></i>De Papá</h4>
           <p>"Con mucha ilusión y agradecimiento a Dios, queremos compartir contigo un momento muy especial en nuestras vidas: el bautizo de nuestro hijo Matías. Será una ocasión llena de fe, alegría y unión familiar, y nos encantaría contar con tu presencia para celebrar juntos este día tan especial"</p>
-          <div class="col-md-6 mb-4 d-inline-block">
+          <div class="col-md-6 mb-4">
           <div class="card card-safari h-100">
             <img src="beto.jpeg" class="card-img-top" alt="Roberto">
             <div class="card-body text-center">
@@ -796,6 +796,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
